# batchinserter

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
sql/: create.sql  populate.sh
src/: main.rs
src/db/: mod.rs  models.rs  postgres.rs
