[package]
name = "batchinserter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9",  default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "sync"] }
clap = "2"

[build-dependencies]
syn = "1"
